ai-office-server/kubernetes/argocd/yml/opencost.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: argocd-gateway-to-opencost
  namespace: opencost
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: argocd
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  hostnames:
    - "alexopencost.snowse.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opencost
          namespace: opencost
          port: 9090
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: opencost-policy
  namespace: opencost
spec:
  selector:
    matchLabels:
      app: opencost
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["argocd", "istio-system", "monitoring"]
